
$Date$

VEGAN STABLE VERSIONS

Version 1.15-2 (opened January 14, 2009)

	* merged r686: rad.null failed with families gaussian and Gamma.

	* merged r678: anovacca.bymargin was not setting RNG properly for
	the second term.
	
	* merged r673: vegdist doc fixes for Horn-Morisita equation.
	
	* merged r671: ordirgl warnings with type = "t".

	* merged r559, r662, r663, r664: adonis adds one both to numerator
	and denominator in permuation tests, increases default number of
	permutations from 5 to 999, and gains a 'terms' component.

	* merged r660: Rd parser v2 fixes to make vegan R 2.9.0-ready.

	* merged r652, r657: cleaner output of summary.cca in unconstrained
	models (PCA, CA).
	
Version 1.15-1 (released December 19, 2008)

	* merged r644: \$ escape fix in Rd files.
	
	* added warning on permatswap, since the "swap" algorithm used
	there appeared to be biased in tests run by PS & JO.

	* merged r598: text.decorana failed.

	* merged r590: betadisper and related functions now work when
	'group' represents a single group/level.
	
	* merged r550, 552: neat plot.cca when input rownames are NULL.

	* new email address of Peter Solymos in Rd files (from r520).

	* fixed row/column mix-up in permatfull (the bugfix part of r525
	transferred by hand).

	* merged r533: warning of ties in nesteddisc().

	* merged r526: typo in wcmdscale() result object item.

	* copied head/tail of summary.cca.

	* merged r516, 519, 521: radfit fixes for 0..2 species
	communities. 

	* merged 522: ordiParseFormula takes care of non-NULL row names.


Version 1.15-0 (released September 30, 2008)

	* based on rev506 at http://r-forge.r-project.org/

	* removed MOStest.

	* removed adipart.

VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/

Version 1.14-12 (closed September 26, 2008)

	* add1.cca, drop1.cca: new functions that also implement
	permutation tests with argument test = "permutation", but only use
	default methods with test = "none". Function drop1.cca uses